cabal-version: 1.12

name: anpr
version: 1.0.0.0
synopsis: Haskell bindings for TSANPR library
description: TSANPR library bindings for Haskell
license: MIT
license-file: LICENSE
author: TS-Solution Corp.
maintainer: bobhyun@gmail.com
category: Graphics
build-type: Simple

library
  exposed-modules: TSANPR
  hs-source-dirs: src
  build-depends:
      base >= 4.7 && < 5,
      bytestring >= 0.10,
      directory >= 1.2
  default-language: Haskell2010
  ghc-options: -Wall -O2
  if os(windows)
    extra-libraries: kernel32
  else
    extra-libraries: dl
  default-extensions: CPP

executable anpr
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      base >= 4.7 && < 5,
      anpr,
      bytestring >= 0.10,
      process >= 1.2,
      directory >= 1.2
  default-language: Haskell2010
  ghc-options: -Wall -O2
  if os(windows)
    extra-libraries: kernel32
  else
    extra-libraries: dl
  default-extensions: CPP
